src/test/ui/associated-types/associated-types-project-from-hrtb-in-struct.stderr
error[E0212]: cannot extract an associated type from a higher-ranked trait bound in this context
  --> $DIR/associated-types-project-from-hrtb-in-struct.rs:11:12
   |
LL |     field: I::A
   |            ^^^^

error: aborting due to previous error

